<resources>
    <string name="app_name">Home work 1</string>
    <string name="name_window">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="searchEd">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="massageEmail">https://practicum.yandex.ru/android-developer/</string>
    <string name="address">vostrik16@yandex.ru</string>
    <string name="themeSupport">Сообщение разработчикам и разработчицам приложения Playlist Market</string>
    <string name="massageSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="urlTermsOfUse">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_not_found">Ничего не нашлось</string>
    <string name="reset">Обновить</string>
    <string name="not_internet">"Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="_00_00">00:00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mediateka">Медиатека</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="play_lists">Плейлисты</string>
    <string name="mediateka_no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_mediateka">Ваша медиатека пуста</string>
    <string name="newplaylist">Новый плейлист</string>
    <string name="name_track_list">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancellation">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="add_track_playlist">Добавить в плейлист</string>
    <string name="track_already_playlist">Трек уже добавлен в плейлист</string>
    <string name="add_track_for_playlist">Добавлено в плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist">Хотите удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="no_sharing_no_track">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="trackov">треков</string>
    <string name="track">трек</string>
    <string name="tracka">трека</string>

    <string name="minut">минут</string>
    <string name="minuta">минута</string>
    <string name="minuti">минуты</string>


</resources>