<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".media.ui.fragments.FragmentNewPlayList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_playlist_toolbar"
        style="@style/toolBarTop"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml">

        <TextView
            style="@style/tooBarText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/newplaylist" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imagePlayList"
        android:layout_width="355dp"
        android:layout_height="355dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="24dp"
        android:scaleType="fitXY"
        android:src="@drawable/image_shape_new_playlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_playlist_toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_text_name_playlist"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="34dp"
        android:hint="@string/name_track_list"
        app:hintEnabled="true"
        app:hintAnimationEnabled="true"
        android:textColorHint="@color/black"
        app:hintTextColor="@color/blue"
        app:helperTextTextAppearance="@style/HelperTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePlayList" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_text_name_playlist_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:paddingTop="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="19dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edDescription"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:theme="@style/EditTextThemeOverlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:hint="@string/description"
        android:textColorHint="@color/black"
        app:helperTextTextAppearance="@style/HelperTextAppearance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_text_name_playlist" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edDescription_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:paddingTop="18dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="19dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btAddPlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/selector_edtext"
        android:fontFamily="@font/ys_text_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>