<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/toolBarTop"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UsingOnClickInXml" />


        <ImageView
            android:id="@+id/track_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/icon_track_default"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/content_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/image_group_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="track_image, track_image, group_name" />


        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_medium"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/group_name"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/track_image"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="34dp"
            android:fontFamily="@font/ys_text_medium"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/image_group_name"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/track_name"
            tools:text="The Beatles" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/bt_add_like_play"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="bt_add, bt_play, bt_like, time_left" />

        <ImageView
            android:id="@+id/bt_add"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:src="@drawable/button_add"
            app:layout_constraintBottom_toBottomOf="@+id/bt_play"
            app:layout_constraintEnd_toStartOf="@id/bt_play"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@id/content_start"
            app:layout_constraintTop_toBottomOf="@id/image_group_name" />


        <ImageView
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bt_play"
            app:layout_constraintEnd_toStartOf="@id/bt_like"
            app:layout_constraintStart_toEndOf="@id/bt_add"
            app:layout_constraintTop_toBottomOf="@id/image_group_name" />

        <ImageView
            android:id="@+id/bt_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button__like"
            app:layout_constraintBottom_toBottomOf="@+id/bt_play"
            app:layout_constraintEnd_toEndOf="@id/content_end"
            app:layout_constraintStart_toEndOf="@id/bt_play"
            app:layout_constraintTop_toBottomOf="@id/image_group_name" />

        <TextView
            android:id="@+id/time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/_00_00"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/bt_play"
            app:layout_constraintStart_toStartOf="@id/bt_play"
            app:layout_constraintTop_toBottomOf="@id/bt_play" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/description_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/description_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:fontFamily="@font/ys_text_regular"
            android:text="@string/duration"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/description_start"
            app:layout_constraintTop_toBottomOf="@id/bt_add_like_play" />

        <TextView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_text_regular"
            android:text="@string/album"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/description_start"
            app:layout_constraintTop_toBottomOf="@id/duration" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/ys_text_regular"
            android:text="@string/year"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/description_start"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="@id/description_start"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_text_regular"
            android:text="@string/country"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@id/description_start"
            app:layout_constraintTop_toBottomOf="@id/genre" />


        <TextView
            android:id="@+id/duration_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/duration"
            app:layout_constraintEnd_toEndOf="@id/description_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/duration"
            app:layout_constraintTop_toTopOf="@+id/duration"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="00:00" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_album"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:barrierDirection="end"
            app:constraint_referenced_ids="duration" />

        <TextView
            android:id="@+id/album_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/ys_text_regular"
            android:gravity="end|center_vertical"
            android:maxLines="1"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/album"
            app:layout_constraintEnd_toEndOf="@id/description_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/barrier_album"
            app:layout_constraintTop_toTopOf="@+id/album"
            tools:text="@string/album" />

        <TextView
            android:id="@+id/year_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/year"
            app:layout_constraintEnd_toEndOf="@id/description_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="@+id/content_start"
            app:layout_constraintTop_toTopOf="@+id/year"
            tools:text="@string/year" />

        <TextView
            android:id="@+id/genre_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/genre"
            app:layout_constraintEnd_toEndOf="@id/description_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/genre"
            app:layout_constraintTop_toTopOf="@+id/genre"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/country_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_regular"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/country"
            app:layout_constraintEnd_toEndOf="@id/description_end"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/country"
            app:layout_constraintTop_toTopOf="@+id/country"
            tools:text="@string/country" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>